SDKs/twilio.com/twilio_studio_v2/1.37.4/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateExecutionRequest req = new CreateExecutionRequest() {{
                security = new CreateExecutionSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateExecutionPathParams() {{
                    flowSid = "eos";
                }};
                request = new CreateExecutionCreateExecutionRequest() {{
                    from = "praesentium";
                    parameters = "itaque";
                    to = "ipsum";
                }};
            }};

            CreateExecutionResponse res = sdk.createExecution(req);

            if (res.studioV2FlowExecution.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->